# online-store

./: .env.example  .flake8  Dockerfile  README.md  catalog_fixture.json  docker-compose.yml  group_fixture.json  product_fixture.json  pyproject.toml
.github/workflows/: ci.yml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_is_published.py
blog/templates/: base_block.html
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
blog/templates/includes/: blog_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0003_alter_product_options.py  0004_product_publication_status.py  0005_alter_product_publication_status.py  0006_product_owner_alter_product_publication_status.py
catalog/templates/: base.html  contacts.html  home.html  home_view.html  product_detail.html
catalog/templates/catalog/: category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html  inc_menu2.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
nginx/: nginx.conf
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/registration/: login.html
users/templates/users/: user_form.html
